<resources>
    <string name="app_name">BatikKita</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_scan">Scan</string>
    <string name="title_gift">Gift</string>
    <string name="title_Map">Map</string>
    <string name="title_e_commerce">E-Commerce</string>
    <string name="title_fragment_home">WELCOME TO BATIK KITA!</string>
    <string name="example_batik">BATIK 1</string>
    <string name="example_location">JOGJAKARTA</string>
</resources>