<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan_24"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_gift"
        android:icon="@drawable/ic_gift"
        android:title="@string/title_gift" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_24"
        android:title="@string/title_Map" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_e_commerce" />

</menu>